dccweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: dccweb
  name: dccweb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dccweb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: dccweb
    spec:
      containers:
        - args:
            - /bin/sh
            - -c
            - " while ! nc -z db 27017; do\n  echo \"waiting for database ...\";\n  sleep 3;\ndone; echo \"db is ready!\"; npm start; "
          image: 140.121.xxx.xx:5000/dccweb:v9
          name: dccweb
          ports:
            - containerPort: 80
            - containerPort: 443
          resources: {}
          # volumeMounts:
          #   - mountPath: /app
          #     name: dccweb-claim0
      restartPolicy: Always
      # volumes:
      #   - name: dccweb-claim0
      #     persistentVolumeClaim:
      #       claimName: dccweb-claim0
status: {}
